--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
-    <title>Newcastle 5050 lottery</title>
+    <title>5050 lottery</title>
     <!-- Search Engine -->
     <meta name="description" content="Match day draw lottery">
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Newcastle 5050 lottery">
+    <meta itemprop="name" content="5050 lottery">
     <meta itemprop="description" content="Match day draw lottery">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Newcastle 5050 lottery">
+    <meta name="twitter:title" content="5050 lottery">
     <meta name="twitter:description" content="Match day draw lottery">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Newcastle 5050 lottery">
+    <meta name="og:title" content="5050 lottery">
     <meta name="og:description" content="Match day draw lottery">
-    <meta name="og:site_name" content="Newcastle 5050 lottery">
+    <meta name="og:site_name" content="5050 lottery">
     <meta name="og:type" content="website">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
           integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
@@ -63,7 +64,7 @@
     <div class="inner_wrapper">
         <div class="block">
             <a href="index.html">
-                <img src="img/logo-newcastle.png">
+                <img src="img/logo.png">
             </a>
         </div>
     </div>
@@ -106,7 +107,7 @@
         <!--HERO.SCSS-->
         <div class="block hero">
             <div class="title-wrap">
-                <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
+                <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
                 <h4>And more importantly much needed support for Newcastle United Foundation</h4>
             </div>
         </div>
