updated to bring inline with XD
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="inner_bottom">
                 <h3><strong>POT AMOUNT</strong> £2,455</h3>
                 <h5><strong>£2</strong> PER TICKET</h5>
-                <a class="button-primary" href="steps/step-one.html">PLAY NOW&nbsp;&gt;</a>
+                <a class="button-primary" href="steps/step-one.html">Play Now&nbsp;&gt;</a>
             </div>
         </div>
     </div>
@@ -174,7 +174,6 @@
     </div>
 </section>
 <footer>
-
     <div class="inner_wrapper footer-nav">
         <nav class="block">
             <ul>
