--- a/steps/step-four.html
+++ b/steps/step-four.html
@@ -98,9 +98,10 @@
         </header>
         <!--HERO.SCSS-->
         <div class="block hero">
-            <h1>WIND CASH PRIZES AND SUPPORT THE LOTTERY</h1>
-            <h4>And more importantly much needed support for newcastle United Foundation</h4>
-
+            <div class="title-wrap">
+                <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
+                <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+            </div>
         </div>
         <!--DRAW-STYLES.SCSS-->
         <div class="block draw step-four">
@@ -132,7 +133,7 @@
 
             <div class="inner_bottom">
                 <h4>Increase your chances with a subscription!</h4>
-                <a class="button-primary" href="">NEXT</a>
+                <a class="button-primary alt" href="">Join Now</a>
 
             </div>
 
@@ -163,8 +164,7 @@
     </div>
 </section>
 
-
-<footer>
+<section>
     <div class="inner_wrapper ticker">
         <div class="block">
             <h6>Mr A Other Won £345.06</h6>
@@ -175,6 +175,8 @@
             <h6>Mr A Other Won £345.06</h6>
         </div>
     </div>
+</section>
+<footer>
     <div class="inner_wrapper footer-nav">
         <nav class="block">
             <ul>
