--- a/steps/step-one.html
+++ b/steps/step-one.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js newcastleunited"  lang="en">
+<html class="no-js newcastleunited" lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -30,32 +30,30 @@
     <link rel="stylesheet" href="../css/main.min.css">
 
 
-
-    <meta property="og:url" content="https://imaginatecreative.github.io/5050-lottery-everton/" />
-    <meta property="og:image" content="img/newcastlesocialmedia.jpg" />
-
+    <meta property="og:url" content="https://imaginatecreative.github.io/5050-lottery-everton/"/>
+    <meta property="og:image" content="img/newcastlesocialmedia.jpg"/>
 
 
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="../img/favicon/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../img/favicon/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../img/favicon/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../img/favicon/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="../img/favicon/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="../img/favicon/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="../img/favicon/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="../img/favicon/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="../img/favicon/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="../img/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="../img/favicon/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="../img/favicon/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="../img/favicon/favicon-128.png" sizes="128x128" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="../img/favicon/apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../img/favicon/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../img/favicon/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../img/favicon/apple-touch-icon-144x144.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="../img/favicon/apple-touch-icon-60x60.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="../img/favicon/apple-touch-icon-120x120.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="../img/favicon/apple-touch-icon-76x76.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="../img/favicon/apple-touch-icon-152x152.png"/>
+    <link rel="icon" type="image/png" href="../img/favicon/favicon-196x196.png" sizes="196x196"/>
+    <link rel="icon" type="image/png" href="../img/favicon/favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/png" href="../img/favicon/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="../img/favicon/favicon-16x16.png" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="../img/favicon/favicon-128.png" sizes="128x128"/>
     <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-TileImage" content="mstile-144x144.png"/>
+    <meta name="msapplication-square70x70logo" content="mstile-70x70.png"/>
+    <meta name="msapplication-square150x150logo" content="mstile-150x150.png"/>
+    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png"/>
+    <meta name="msapplication-square310x310logo" content="mstile-310x310.png"/>
 </head>
 <body>
 
@@ -99,7 +97,8 @@
         </header>
         <!--HERO.SCSS-->
         <div class="block hero">
-            <h1>More tickets </br>= Bigger Prizes</h1>
+            <h1>More tickets</h1>
+            <h1>= Bigger Prizes</h1>
             <h4>And more importantly much needed support for newcastle United Foundation</h4>
 
         </div>
@@ -152,9 +151,7 @@
         </div>
     </div>
 </section>
-
-
-<footer>
+<section>
     <div class="inner_wrapper ticker">
         <div class="block">
             <h6>Mr A Other Won £345.06</h6>
@@ -165,6 +162,8 @@
             <h6>Mr A Other Won £345.06</h6>
         </div>
     </div>
+</section>
+<footer>
     <div class="inner_wrapper footer-nav">
         <nav class="block">
             <ul>
