--- a/sub-pages/email.html
+++ b/sub-pages/email.html
@@ -102,8 +102,8 @@
                                         <tr>
                                             <td style="width:294px;"><img alt="" title="" height="auto"
                                                                           src="../img/email_header.png"
-                                                                          style="border:none;border-radius:0px;display:block;font-size:13px;outline:none;text-decoration:none;width:100%;height:auto;"
-                                                                          width="294"></td>
+                                                                          style="border:none;border-radius:0px;display:block;font-size:13px;outline:none;text-decoration:none;width:100%;max-width:190px;margin: 0 auto;height:auto;"
+                                                                          width="194px"></td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -193,10 +193,10 @@
                                                        style="border-collapse:separate;" align="center" border="0">
                                                     <tbody>
                                                     <tr>
-                                                        <td style="border:none;border-radius:24px;color:#fff;cursor:auto;padding:10px 25px;"
+                                                        <td style="border:none;border-radius:24px;color:#fff;cursor:auto;padding:10px 25px;background: rgb(227,27,35)"
                                                             align="center" valign="middle" bgcolor="#1b9fd6"><a
                                                                 href="https://google.com"
-                                                                style="text-decoration:none;background:#1b9fd6;color:#fff;font-family:Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif;font-size:16px;font-weight:normal;line-height:120%;text-transform:none;margin:0px;"
+                                                                style="text-decoration:none;background:rgb(227,27,35);color:#fff;font-family:Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif;font-size:16px;font-weight:normal;line-height:120%;text-transform:none;margin:0px;"
                                                                 target="_blank">Verify Email</a></td>
                                                     </tr>
                                                     </tbody>
@@ -310,7 +310,7 @@
            style="width:600px;">
         <tr>
             <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">      <![endif]-->
-    <table role="presentation" cellpadding="0" cellspacing="0" style="background:#1b9fd6;font-size:0px;width:100%;"
+    <table role="presentation" cellpadding="0" cellspacing="0" style="background:rgb(227,27,35);font-size:0px;width:100%;"
            border="0">
         <tbody>
         <tr>
