--- a/sub-pages/second-chance.html
+++ b/sub-pages/second-chance.html
@@ -62,7 +62,7 @@
     <div class="inner_wrapper">
         <div class="block">
             <a href="../index.html">
-                <img src="../img/logo-newcastle.png">
+                <img src="../img/logo.png">
             </a>
         </div>
     </div>
