added ticker and carousel
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/steps/step-two.html
+++ b/steps/step-two.html
@@ -99,9 +99,19 @@
         </header>
         <!--HERO.SCSS-->
         <div class="block hero">
-            <div class="title-wrap">
-                <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
-                <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+            <div class="slider">
+                <div class="inner_slide">
+                    <div class="title-wrap">
+                        <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
+                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                    </div>
+                </div>
+                <div class="inner_slide">
+                    <div class="title-wrap">
+                        <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
+                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                    </div>
+                </div>
             </div>
         </div>
         <!--DRAW-STYLES.SCSS-->
@@ -247,12 +257,22 @@
 <section>
     <div class="inner_wrapper ticker">
         <div class="block">
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
         </div>
     </div>
 </section>
@@ -305,6 +325,8 @@
 <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="../js/vendor/slick.js"></script>
+
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 <script src="../js/plugins.js"></script>
 <script src="../js/main.js"></script>
