--- a/sub-pages/form-elements.html
+++ b/sub-pages/form-elements.html
@@ -227,16 +227,25 @@
         </div>
     </div>
 </section>
-
 <section>
     <div class="inner_wrapper ticker">
         <div class="block">
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
         </div>
     </div>
 </section>
