--- a/steps/step-one.html
+++ b/steps/step-one.html
@@ -97,10 +97,20 @@
         </header>
         <!--HERO.SCSS-->
         <div class="block hero">
-            <h1>More tickets</h1>
-            <h1>= Bigger Prizes</h1>
-            <h4>And more importantly much needed support for newcastle United Foundation</h4>
-
+            <div class="slider">
+                <div class="inner_slide">
+                    <div class="title-wrap">
+                        <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
+                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                    </div>
+                </div>
+                <div class="inner_slide">
+                    <div class="title-wrap">
+                        <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
+                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--DRAW-STYLES.SCSS-->
 
@@ -155,10 +165,20 @@
     <div class="inner_wrapper ticker">
         <div class="block">
             <h6>Mr A Other Won £345.06</h6>
+        </div>
+        <div class="block">
             <h6>Mr A Other Won £345.06</h6>
+        </div>
+        <div class="block">
             <h6>Mr A Other Won £345.06</h6>
+        </div>
+        <div class="block">
             <h6>Mr A Other Won £345.06</h6>
+        </div>
+        <div class="block">
             <h6>Mr A Other Won £345.06</h6>
+        </div>
+        <div class="block">
             <h6>Mr A Other Won £345.06</h6>
         </div>
     </div>
@@ -212,6 +232,8 @@
 <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="../js/vendor/slick.js"></script>
+
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 <script src="../js/plugins.js"></script>
 <script src="../js/main.js"></script>
