--- a/sub-pages/confirm.html
+++ b/sub-pages/confirm.html
@@ -160,12 +160,22 @@
 <section>
     <div class="inner_wrapper ticker">
         <div class="block">
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
-            <h6>Mr A Other Won £345.06</h6>
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
+        </div>
+        <div class="block">
+            <h6><a href="">Mr A Other Won £345.06</a></h6>
         </div>
     </div>
 </section>
@@ -218,6 +228,8 @@
 <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="../js/vendor/slick.js"></script>
+
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 <script src="../js/plugins.js"></script>
 <script src="../js/main.js"></script>
