--- a/index.html
+++ b/index.html
@@ -109,13 +109,14 @@
             <div class="slider">
                 <div class="inner_slide">
                     <div class="title-wrap">
-                        <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
+                        <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
                         <h4>And more importantly much needed support for Newcastle United Foundation</h4>
                     </div>
                 </div>
                 <div class="inner_slide">
                     <div class="title-wrap">
-                        <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
+                        <h1>More tickets</h1>
+                        <h1>= Bigger Prizes</h1>
                         <h4>And more importantly much needed support for Newcastle United Foundation</h4>
                     </div>
                 </div>
