chnaged the images
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/sub-pages/second-chance.html
+++ b/sub-pages/second-chance.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 </section>
-<section class="main step-two-wrapper">
+<section class="main second-chance-wrapper">
     <div class="inner_wrapper top_row">
         <!--SIDE-BAR.SCSS-->
         <header class="block side_bar">
