update to text and updated js to avoid matching height of ticker slider
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/steps/step-three.html
+++ b/steps/step-three.html
@@ -102,14 +102,14 @@
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
-                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                        <h4>And more importantly much needed support forLFC Foundation</h4>
                     </div>
                 </div>
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>More tickets</h1>
                         <h1>= Bigger Prizes</h1>
-                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                        <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
             </ul>
         </nav>
         <div class="block copy">
-            <h6>Newcastle United Foundation, St James' Park, Newcastle Upon Tyne, NE1 4ST</h6>
+            <h6>Liverpool FC Foundation, Anfield Road,  Liverpool, L4 0TH</h6>
             <h6>&copy; Copyright 2018 All Rights Reserved 5050 Central Ltd</h6>
         </div>
     </div>
