--- a/steps/step-one.html
+++ b/steps/step-one.html
@@ -101,14 +101,14 @@
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
-                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                        <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>More tickets</h1>
                         <h1>= Bigger Prizes</h1>
-                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                        <h4>And more importantly much needed support for the LFC Foundation</h4>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
     <div class="inner_wrapper bottom_row">
         <!--NAV BLOCKS.SCSS-->
         <div class="block sub-page">
-            <h4><strong><a href="../sub-pages/account.html">Newcastle United&nbsp;</a></strong></h4>
+            <h4><strong><a href="sub-pages/account.html">Liverpool</a></strong></h4>
         </div>
         <div class="block sub-page">
             <h4><strong><a href="../sub-pages/account.html">How the draw works&nbsp;</a></strong></h4>
@@ -199,7 +199,7 @@
             </ul>
         </nav>
         <div class="block copy">
-            <h6>Newcastle United Foundation, St James' Park, Newcastle Upon Tyne, NE1 4ST</h6>
+            <h6>Liverpool FC Foundation, Anfield Road,  Liverpool, L4 0TH</h6>
             <h6>&copy; Copyright 2018 All Rights Reserved 5050 Central Ltd</h6>
         </div>
     </div>
