--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
-                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                        <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>More tickets</h1>
                         <h1>= Bigger Prizes</h1>
-                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                        <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
             </div>
