updated some more text
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/sub-pages/account.html
+++ b/sub-pages/account.html
@@ -117,7 +117,7 @@
     <div class="inner_wrapper bottom_row">
         <!--NAV BLOCKS.SCSS-->
         <div class="block sub-page">
-            <h4><strong><a href="../sub-pages/account.html">Newcastle United&nbsp;</a></strong></h4>
+            <h4><strong><a href="../sub-pages/account.html">LFC Foundation</a></strong></h4>
         </div>
         <div class="block sub-page">
             <h4><strong><a href="../sub-pages/account.html">How the draw works&nbsp;</a></strong></h4>
@@ -170,7 +170,7 @@
             </ul>
         </nav>
         <div class="block copy">
-            <h6>Newcastle United Foundation, St James' Park, Newcastle Upon Tyne, NE1 4ST</h6>
+            <h6>Liverpool FC Foundation, Anfield Road,  Liverpool, L4 0TH</h6>
             <h6>&copy; Copyright 2018 All Rights Reserved 5050 Central Ltd</h6>
         </div>
     </div>
