--- a/sub-pages/second-chance.html
+++ b/sub-pages/second-chance.html
@@ -101,13 +101,13 @@
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
-                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                        <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
-                        <h4>And more importantly much needed support for Newcastle United Foundation</h4>
+                        <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
             </div>
@@ -191,8 +191,8 @@
 
                     <!-- Button -->
                     <div class="group">
-                        <button id="confirm" name="confirm" class="button-primary">Next</button>
-                        <a class="button-primary" href="confirm.html">NEXT</a>
+                        <button id="confirm" name="confirm" class="button-primary alt">Next</button>
+                        <a class="button-primary alt" href="confirm.html">NEXT</a>
                     </div>
 
                 </fieldset>
