updated to responsive
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/steps/step-three.html
+++ b/steps/step-three.html
@@ -146,7 +146,7 @@
     <div class="inner_wrapper bottom_row">
         <!--NAV BLOCKS.SCSS-->
         <div class="block sub-page">
-            <h4><strong><a href="../sub-pages/account.html">Newcastle United&nbsp;</a></strong></h4>
+            <h4><strong><a href="../sub-pages/account.html">Liverpool Foundation&nbsp;</a></strong></h4>
         </div>
         <div class="block sub-page">
             <h4><strong><a href="../sub-pages/account.html">How the draw works&nbsp;</a></strong></h4>
