--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="inner_wrapper bottom_row">
         <!--NAV BLOCKS.SCSS-->
         <div class="block sub-page">
-            <h4><strong><a href="sub-pages/account.html">Liverpool</a></strong></h4>
+            <h4><strong><a href="sub-pages/account.html">Liverpool Foundation&nbsp;</a></strong></h4>
         </div>
         <div class="block sub-page">
             <h4><strong><a href="sub-pages/account.html">How the draw works&nbsp;</a></strong></h4>
