--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js newcastleunited" lang="">
+<html class="no-js liverpoolfc" lang="">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -110,7 +110,6 @@
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
-                        <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
                 <div class="inner_slide">
