--- a/steps/step-two.html
+++ b/steps/step-two.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js newcastleunited" lang="en">
+<html class="no-js liverpoolfc" lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -116,7 +116,7 @@
             </div>
         </div>
         <!--DRAW-STYLES.SCSS-->
-        <div class="block draw step-two">
+        <div class="block draw step-two reversed">
 
 
             <form>
