updates to javascript
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/sub-pages/second-chance.html
+++ b/sub-pages/second-chance.html
@@ -166,6 +166,14 @@
                         <span class="bar"></span>
                         <label class=" control-label" for="mobile-number">Mobile Phone</label>
                     </div>
+                    <div class="group label tabbed">
+                        <label class=" control-label" for="city">Date of Birth</label>
+                        <div class="autotabbed">
+                            <input type="text" maxlength="2" size="2" placeholder="dd"/> /
+                            <input type="text" maxlength="2" size="2" placeholder="mm"/> /
+                            <input type="text" maxlength="4" size="4" placeholder="yyyy"/>
+                        </div>
+                    </div>
                     <!-- Ticket Reference input-->
                     <div class="group">
                         <span class="visuallyhidden">Please enter your Ticket Reference</span>
