updates in respose to mantis
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/steps/step-two.html
+++ b/steps/step-two.html
@@ -226,9 +226,21 @@
 
                     <!-- Button -->
                     <div class="group">
+                        <select>
+                            <option value="volvo">Volvo</option>
+                            <option value="saab">Saab</option>
+                            <option value="opel">Opel</option>
+                            <option value="audi">Audi</option>
+                        </select>
+                    </div>
+
+                    <!-- Button -->
+                    <div class="group">
                         <button id="confirm" name="confirm" class="button-primary alt">Next</button>
                         <a class="button-primary alt" href="step-three.html">NEXT</a>
                     </div>
+
+
 
                 </fieldset>
             </form>
