--- a/sub-pages/confirm.html
+++ b/sub-pages/confirm.html
@@ -141,7 +141,7 @@
             </div>
             <div class="inner_bottom">
                 <h4>Increase your chances with a subscription!</h4>
-                <a class="button-primary" href="">NEXT</a>
+                <a class="button-primary alt" href="">NEXT</a>
             </div>
         </div>
     </div>
