--- a/sub-pages/account.html
+++ b/sub-pages/account.html
@@ -165,7 +165,7 @@
                 <li><a href="../sub-pages/account.html">Privacy Policy</a></li>
                 <li><a href="../sub-pages/account.html">Refund Policy</a></li>
                 <li><a href="../sub-pages/account.html">Responsible Gambling</a></li>
-                <li><a href="sub-pages/form-elements.html">Form Elements</a></li>
+                <li><a href="../sub-pages/form-elements.html">Form Elements</a></li>
 
             </ul>
         </nav>
@@ -177,6 +177,8 @@
     <div class="inner_wrapper acred">
         <div class="block visa">
             <img src="../img/visa_mc.png">
+            <img src="../img/payment_method/PEPSized_Maestro.png">
+
             <img src="../img/logo-placeholder.png">
 
         </div>
