--- a/sub-pages/second-chance.html
+++ b/sub-pages/second-chance.html
@@ -113,7 +113,7 @@
             </div>
         </div>
         <!--DRAW-STYLES.SCSS-->
-        <div class="block draw step-two">
+        <div class="block draw">
 
             <form>
                 <fieldset>
