--- a/steps/step-two.html
+++ b/steps/step-two.html
@@ -102,14 +102,13 @@
             <div class="slider">
                 <div class="inner_slide">
                     <div class="title-wrap">
-                        <h1>Win Cash Prizes</h1></br><h1>and Support</h1></br><h1>LFC Foundation Lottery</h1>
-                        <h4>And more importantly much needed support for LFC Foundation</h4>
+                        <h1>Win A Huge Cash Prize</h1></br><h1>and support the</h1></br><h1> LFC Foundation Lottery</h1>
                     </div>
                 </div>
                 <div class="inner_slide">
                     <div class="title-wrap">
                         <h1>More tickets</h1>
-                        <h1>= Bigger Prizes</h1>
+                        <h1>= Bigger Jackpot</h1>
                         <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
@@ -251,7 +250,7 @@
     <div class="inner_wrapper bottom_row">
         <!--NAV BLOCKS.SCSS-->
         <div class="block sub-page">
-            <h4><strong><a href="../sub-pages/account.html">Liverpool Foundation&nbsp;</a></strong></h4>
+            <h4><strong><a href="https://foundation.liverpoolfc.com/" target="_blank">Liverpool Foundation&nbsp;</a></strong></h4>
         </div>
         <div class="block sub-page">
             <h4><strong><a href="../sub-pages/account.html">How the draw works&nbsp;</a></strong></h4>
@@ -319,18 +318,12 @@
 
         </div>
         <div class="block social">
-            <a href="">
-                <img src="../img/instagram.svg">
-            </a>
-            <a href="">
-                <img src="../img/twitter.svg">
-            </a>
-            <a href="">
-                <img src="../img/facebook.svg">
-            </a>
-            <a href="">
-                <img src="../img/youtube.svg">
-            </a>
+            <button class="fab fa-facebook-square"><a href=></a></button>
+            <button class="fab fa-twitter"><a href=" "></a></button>
+            <button class="fas fa-envelope"><a href=" "></a></button>
+            <button class="fab fa-google-plus"><a href=" "></a></button>
+            <button class="fab fa-snapchat"><a href=" "></a></button>
+            <button class="fab fa-instagram"><a href=" "></a></button>
         </div>
     </div>
 
