--- a/sub-pages/account.html
+++ b/sub-pages/account.html
@@ -78,7 +78,7 @@
             <nav>
                 <ul class="main-nav">
                     <li class="fas fa-home"><a href="../index.html">Home</a></li>
-                    <li class="fas fa-trophy"><a href="">Winners</a></li>
+                    <li class="fas fa-trophy"><a href="previous-winners.html">Winners</a></li>
                     <li class="fas fa-sign-in-alt"><a href="">Login</a></li>
                     <li class="fas fa-user-plus"><a href="">Register</a></li>
                 </ul>
