--- a/sub-pages/second-chance.html
+++ b/sub-pages/second-chance.html
@@ -100,13 +100,13 @@
             <div class="slider">
                 <div class="inner_slide">
                     <div class="title-wrap">
-                        <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
-                        <h4>And more importantly much needed support for LFC Foundation</h4>
+                        <h1>Win A Huge Cash Prize</h1></br><h1>and support the</h1></br><h1> LFC Foundation Lottery</h1>
                     </div>
                 </div>
                 <div class="inner_slide">
                     <div class="title-wrap">
-                        <h1>WIN CASH PRIZES AND SUPPORT THE LOTTERY</h1>
+                        <h1>More tickets</h1>
+                        <h1>= Bigger Jackpot</h1>
                         <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
@@ -196,11 +196,18 @@
                         <input type="checkbox" id="terms-conditions" required="">
                         <label for="terms-conditions">Terms &amp; Conditions</label>
                     </div>
-
+                    <div class="group">
+                        <select>
+                            <option value="volvo">Volvo</option>
+                            <option value="saab">Saab</option>
+                            <option value="opel">Opel</option>
+                            <option value="audi">Audi</option>
+                        </select>
+                    </div>
                     <!-- Button -->
                     <div class="group">
-                        <button id="confirm" name="confirm" class="button-primary alt">Next</button>
-                        <a class="button-primary alt" href="confirm.html">NEXT</a>
+                        <button id="confirm" name="confirm" class="button-primary ">Next</button>
+                        <a class="button-primary " href="confirm.html">NEXT</a>
                     </div>
 
                 </fieldset>
@@ -285,18 +292,12 @@
 
         </div>
         <div class="block social">
-            <a href="">
-                <img src="../img/instagram.svg">
-            </a>
-            <a href="">
-                <img src="../img/twitter.svg">
-            </a>
-            <a href="">
-                <img src="../img/facebook.svg">
-            </a>
-            <a href="">
-                <img src="../img/youtube.svg">
-            </a>
+            <button class="fab fa-facebook-square"><a href=></a></button>
+            <button class="fab fa-twitter"><a href=" "></a></button>
+            <button class="fas fa-envelope"><a href=" "></a></button>
+            <button class="fab fa-google-plus"><a href=" "></a></button>
+            <button class="fab fa-snapchat"><a href=" "></a></button>
+            <button class="fab fa-instagram"><a href=" "></a></button>
         </div>
     </div>
 
