--- a/sub-pages/form-elements.html
+++ b/sub-pages/form-elements.html
@@ -54,7 +54,7 @@
             <nav>
                 <ul class="main-nav">
                     <li class="fas fa-home"><a href="../index.html">Home</a></li>
-                    <li class="fas fa-trophy"><a href="">Winners</a></li>
+                    <li class="fas fa-trophy"><a href="previous-winners.html">Winners</a></li>
                     <li class="fas fa-sign-in-alt"><a href="">Login</a></li>
                     <li class="fas fa-user-plus"><a href="">Register</a></li>
                 </ul>
@@ -279,18 +279,12 @@
 
         </div>
         <div class="block social">
-            <a href="">
-                <img src="../img/instagram.svg">
-            </a>
-            <a href="">
-                <img src="../img/twitter.svg">
-            </a>
-            <a href="">
-                <img src="../img/facebook.svg">
-            </a>
-            <a href="">
-                <img src="../img/youtube.svg">
-            </a>
+            <button class="fab fa-facebook-square"><a href=></a></button>
+            <button class="fab fa-twitter"><a href=" "></a></button>
+            <button class="fas fa-envelope"><a href=" "></a></button>
+            <button class="fab fa-google-plus"><a href=" "></a></button>
+            <button class="fab fa-snapchat"><a href=" "></a></button>
+            <button class="fab fa-instagram"><a href=" "></a></button>
         </div>
     </div>
 </footer>
