--- a/steps/step-two.html
+++ b/steps/step-two.html
@@ -232,7 +232,14 @@
                             <option value="audi">Audi</option>
                         </select>
                     </div>
-
+                    <div class="group label tabbed">
+                        <label class=" control-label" for="city">Date of Birth</label>
+                        <div class="autotabbed">
+                            <input type="text" maxlength="2" size="2" placeholder="dd"/> /
+                            <input type="text" maxlength="2" size="2" placeholder="mm"/> /
+                            <input type="text" maxlength="4" size="4" placeholder="yyyy"/>
+                        </div>
+                    </div>
                     <!-- Button -->
                     <div class="group">
                         <button id="confirm" name="confirm" class="button-primary alt">Next</button>
