0001280: Edge autofill overrides input fields css
this one kicked my ass

Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/steps/step-two.html
+++ b/steps/step-two.html
@@ -6,6 +6,8 @@
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
     <title>5050 lottery</title>
+    <meta http-equiv="x-ua-compatible" content="IE=edge" />
+
     <!-- Search Engine -->
     <meta name="description" content="Match day draw lottery">
     <!-- Schema.org for Google -->
@@ -226,10 +228,19 @@
                     <!-- Button -->
                     <div class="group">
                         <select>
-                            <option value="volvo">Volvo</option>
-                            <option value="saab">Saab</option>
-                            <option value="opel">Opel</option>
-                            <option value="audi">Audi</option>
+                            <option class="sfix" value="">Please select ...</option>
+                            <option class="sfix" value="AF">Afghanistan</option>
+                            <option class="sfix" value="AX">Aland Islands</option>
+                            <option class="sfix" value="AL">Albania</option>
+                            <option class="sfix" value="DZ">Algeria</option>
+                            <option class="sfix" value="AS">American Samoa</option>
+                            <option class="sfix" value="AD">andorra</option>
+                            <option class="sfix" value="AO">Angola</option>
+                            <option class="sfix" value="AI">Anguilla</option>
+                            <option class="sfix" value="AQ">Antarctica</option>
+                            <option class="sfix" value="AG">Antigua and Barbuda</option>
+                            <option class="sfix" value="AR">Argentina</option>
+                            <option class="sfix" value="AM">Armenia</option>
                         </select>
                     </div>
                     <div class="group label tabbed">
@@ -240,7 +251,7 @@
                             <input type="text" maxlength="4" size="4" placeholder="yyyy"/>
                         </div>
                     </div>
-                    <div class="group  select-style label text-left">
+                    <div class="group label text-left">
                         <label class=" control-label">Country</label>
                         <span class="visuallyhidden">Please enter your country </span>
                         <select name="country" required="true" placeholder="Country" class="inputMaterial save-pi">
