draw-image.jpg - replaced, header.jpg - replaced, hero-one.jpg replaced. span style added, index.html amended, draw style changed to bring  text more central to image

--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
 <section>
     <div class="inner_wrapper ticker">
         <div class="block">
-            <h6><a href="">Mr A Other Won £345.06</a></h6>
+            <h6><span class="ticker-a">Mr A Other Won £345.06</span></h6>
         </div>
         <div class="block">
-            <h6><a href="">Mr A Other Won £345.06</a></h6>
+            <h6><span class="ticker-a">Mr A Other Won £345.06</span></h6>
         </div>
         <div class="block">
-            <h6><a href="">Mr A Other Won £345.06</a></h6>
+            <h6><span class="ticker-a">Mr A Other Won £345.06</span></h6>
         </div>
         <div class="block">
             <h6><a href="">Mr A Other Won £345.06</a></h6>
