0001341: LFC Text alteration
Updated text to the draw text
updates to alt button class

Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                 <h4><strong>Draw closes in:</strong> 2D 20:10:12</h4>
                 <div class="verses">
 
-                    <img src="img/liverpool-crest.png">
-
-                    <h6><strong>VS</strong></h6>
-
-                    <img src="img/southampton.png">
+                    <h3>
+                        Liverpool <br>
+                        <strong>vs</strong><br>
+                        Southampton<br>
+                    </h3>
 
                 </div>
             </div>
