0001338: LFC - Add image to image carousel
Signed-off-by: bluemonkey1130 <bluemonkey1130@gmail.com>

--- a/steps/step-one.html
+++ b/steps/step-one.html
@@ -110,6 +110,9 @@
                         <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
+                <div class="inner_slide">
+
+                </div>
             </div>
         </div>
         <!--DRAW-STYLES.SCSS-->
