--- a/steps/step-two.html
+++ b/steps/step-two.html
@@ -114,6 +114,9 @@
                         <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
+                <div class="inner_slide">
+
+                </div>
             </div>
         </div>
         <!--DRAW-STYLES.SCSS-->
