--- a/sub-pages/second-chance.html
+++ b/sub-pages/second-chance.html
@@ -110,6 +110,9 @@
                         <h4>And more importantly much needed support for LFC Foundation</h4>
                     </div>
                 </div>
+                <div class="inner_slide">
+
+                </div>
             </div>
         </div>
         <!--DRAW-STYLES.SCSS-->
