--- a/steps/step-one.html
+++ b/steps/step-one.html
@@ -118,38 +118,51 @@
         <!--DRAW-STYLES.SCSS-->
 
 
+        <!--<div class="block draw step-one">-->
+        <!--<form>-->
+        <!--<div class="inner_top">-->
+        <!--<h4><strong>POT AMOUNT</strong> £2,455</h4>-->
+        <!--<h4><strong>Draw closes in: 2D 20:10:12</strong></h4>-->
+        <!--<h3><strong>Enter the LFC Foundation Lottery!</strong></h3>-->
+        <!--<p>Half of net proceeds from each draw go to one winning ticket holder. The other half goes straight to the FLC Foundation!</p>-->
+        <!--</div>-->
+        <!--<div class="inner_mid">-->
+        <!--<h2><strong>To play select amount</strong></h2>-->
+        <!--<div class="options-wrap">-->
+        <!--<button class="button-primary choices" type="button" autofocus>£2</button>-->
+        <!--<button class="button-primary choices" type="button">£5</button>-->
+        <!--<button class="button-primary choices" type="button">£10</button>-->
+        <!--<button class="button-primary choices" type="button">£20</button>-->
+        <!--<a class="button-primary" href="step-two.html">£4 : Instant play&nbsp;&gt;</a>-->
+        <!--<a class="button-primary">or subscribe for multiplay&nbsp;&gt;</a>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--<div class="inner_bottom">-->
+        <!--<p>Automatically doub;e your chances to win a meet and greet with Jürgen Klopp in our Second Chance Draw when you subscribe!</p>-->
+        <!--<h6><a href="">Autoplay & Exclusive Benefits</a></h6>-->
+        <!--</div>-->
+        <!--</form>-->
+        <!--</div>-->
+
         <div class="block draw step-one">
             <form>
                 <div class="inner_top">
-                    <h4><strong>POT AMOUNT</strong> £2,455</h4>
-                    <h4><strong>Draw closes in: 2D 20:10:12</strong></h4>
-                    <h3><strong>Enter the LFC Foundation Lottery!</strong></h3>
-                    <p>Half of net proceeds from each draw go to one winning ticket holder. The other half goes straight to the FLC Foundation!</p>
+                    <h3><strong>POT AMOUNT</strong> £2,455</h3>
+                    <h4><strong>Draw closes in:</strong> 2D 20:10:12</h4>
                 </div>
-                <!--<div class="inner_mid">-->
-                    <!--<h2><strong>Choose your number of tickets</strong></h2>-->
-                    <!--<h4><strong>£2</strong> per ticket</h4>-->
-                    <!--<div class="options-wrap">-->
-                        <!--<button class="button-primary choices focus" type="button">1 ticket</button>-->
-                        <!--<button class="button-primary choices" type="button" autofocus>2 tickets</button>-->
-                        <!--<button class="button-primary choices" type="button">5 tickets</button>-->
-                        <!--<button class="button-primary choices" type="button">10 tickets</button>-->
-                        <!--<input class="button-primary choices" placeholder="Other" type="number" name="quantity" min="1">-->
-                    <!--</div>-->
-                <!--</div>-->
                 <div class="inner_mid">
-                    <h2><strong>To play select amount</strong></h2>
+                    <h2><strong>Choose your number of tickets</strong></h2>
+                    <h4><strong>£2</strong> per ticket</h4>
                     <div class="options-wrap">
                         <button class="button-primary choices" type="button" autofocus>£2</button>
                         <button class="button-primary choices" type="button">£5</button>
                         <button class="button-primary choices" type="button">£10</button>
                         <button class="button-primary choices" type="button">£20</button>
-                        <a class="button-primary" href="step-two.html">£4 : Instant play&nbsp;&gt;</a>
-                        <a class="button-primary">or subscribe for multiplay&nbsp;&gt;</a>
                     </div>
                 </div>
                 <div class="inner_bottom">
-                    <p>Automatically doub;e your chances to win a meet and greet with Jürgen Klopp in our Second Chance Draw when you subscribe!</p>
+                    <a class="button-primary" href="step-two.html">£4 : Instant play&nbsp;&gt;</a>
+                    <a class="button-primary">or subscribe for multiplay&nbsp;&gt;</a>
                     <h6><a href="">Autoplay & Exclusive Benefits</a></h6>
                 </div>
             </form>
@@ -160,7 +173,8 @@
     <div class="inner_wrapper bottom_row">
         <!--NAV BLOCKS.SCSS-->
         <div class="block sub-page">
-            <h4><strong><a href="https://foundation.liverpoolfc.com/" target="_blank">Liverpool Foundation&nbsp;</a></strong></h4>
+            <h4><strong><a href="https://foundation.liverpoolfc.com/" target="_blank">Liverpool
+                Foundation&nbsp;</a></strong></h4>
         </div>
         <div class="block sub-page">
             <h4><strong><a href="../sub-pages/account.html">How the draw works&nbsp;</a></strong></h4>
@@ -213,7 +227,7 @@
             </ul>
         </nav>
         <div class="block copy">
-            <h6>Liverpool FC Foundation, Anfield Road,  Liverpool, L4 0TH</h6>
+            <h6>Liverpool FC Foundation, Anfield Road, Liverpool, L4 0TH</h6>
             <h6>&copy; Copyright 2018 All Rights Reserved 5050 Central Ltd</h6>
         </div>
     </div>
